refactor: Merge laboratorios and aulas on espacio
