# index.js
@@ -9,12 +9,11 @@ const swaggerDocumentation = require('./swagger.json');
 
 
 const auth = require('./routes/auth/auth.routes');
-const aula = require('./routes/aula/aula.routes');
 const incidencia = require('./routes/incidencia/incidencia.routes');
 const horario = require('./routes/horario/horario.routes');
 const carrera = require('./routes/carrera/carrera.routes');
 const estudiante = require('./routes/estudiante/estudiante.routes');
-const laboratorio = require('./routes/laboratorio/laboratorio.routes');
+const espacio = require('./routes/espacio/espacio.routes')
 const usuario = require('./routes/usuario/user.route');
 
 app.use(express.json());
@@ -22,12 +21,11 @@ app.use(cors());
 
 app.use('/docs', swaggerUI.serve, swaggerUI.setup(swaggerDocumentation));
 app.use('/api/auth', auth);
-app.use('/api/aula', aula);
+app.use('/api/espacio', espacio);
 app.use('/api/incidencia', incidencia);
 app.use('/api/horario', horario);
 app.use('/api/carrera', carrera);
 app.use('/api/estudiante', estudiante);
-app.use('/api/laboratorio', laboratorio);
 app.use('/api/usuario', usuario);
 
 const start = async () => {
